# ChallengeCentral

./: .gitignore  .replit  API_README.md  DATABASE.md  README.md  SECURITY.md  api_routes.py  api_utils.py  app.py  app_8080.py  audit_log.py  check_admin.py  competition_results.py  config.py  config_example.py  cookies.txt  create_admin.py  create_default_packages.py  forms.py  gunicorn_config.py  main.py  models.py  new_workflow.sh  password_validator.py  pyproject.toml  referral_security.py  replit_run.sh  requirements.txt  routes.py  routes.py.bak  routes_first_part.py  start.sh  submit_answers_new.py  update_competition_schema.py  update_participation_schema.py  update_question_active_flag.py  update_question_table.py
.github/workflows/: deploy.yml
replit_agent/: architecture.md
static/css/: competition.css  custom.css
static/js/: friend_challenge.js  main.js  question_timer.js  rewards.js
templates/: 404.html  500.html  api_keys.html  competition_details.html  competition_results.html  competitions.html  dashboard.html  friend_challenge.html  friend_challenge.html.new  index.html  layout.html  leaderboard.html  login.html  points_pricing.html  register.html  rewards.html
templates/admin/: add_points.html  add_purchase.html  competition_questions.html  competitions.html  config.html  dashboard.html  edit_question.html  locked.html  login.html  points_packages.html  purchases.html  redemptions.html  referrals.html  rewards.html  transactions.html  users.html
templates/chat/: room.html  rooms.html
test_reports/: 2025-05-05_19-25-40_unit_report.html
(+4 files in other folders)
